--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 *{
     transition: .5s;
+    color: #ffffff;
 }
 body{
-    background: #ebebeb;
+    background: #010415;
 }
 
 .collapse{
@@ -16,26 +17,25 @@ body{
 }
 .navbar-nav{
     padding: 5px;
-    background: #ee7752;
-    border-radius: 5px;
-    opacity: .9;
 }
-.navbar-nav:hover{
-    background: #00dd55;
-    border-radius: 5px;
-    opacity: 1;
-}
+
 .nav-item a{
     color: #fff;
     text-decoration: none;
-    padding: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
     font-weight: 600;
 }
 .nav-item a:hover{
+    background: #fff;
+    border-radius: 50px;
     color: #000;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 .navbar-toggler{
-    background: #ee7752;
+    background: #1f57d3;
     width: 50px;
     height: 30px;
 }
@@ -66,37 +66,16 @@ body{
     border: none;
     color: #fff;
     font-size: 30px;
-    font-weight: 200px;
     border-radius: 5px;
-    animation: 2s infinite alternate ease-out hireColor;
+    font-weight: 600;
+    background: #1f57d3;
 }
 .about-left a:hover{
-    
     transition: .5s;
-    color: #000;
+    color: #010415;
     animation: 2s infinite alternate ease-out hireHover;
 }
-@keyframes hireHover{
-    from{
-        background: #00dd55;
-    }
-    to{
-        background: #6ad493;
-    }
-}
-@keyframes hireColor{
-    from{
-        background: #ff4400;
-    }
-    to{
-        background: #ee7752;
-    }
-}
-.about-left a:hover{
-    
-    transition: .5s;
-    color: #000;
-}
+
 .about-right{
     display: flex;
     margin-top: -15%;
@@ -139,7 +118,7 @@ body{
 .project-sector h1 samp{
     font-weight: 700;
     font-size: 29px;
-    color: #000;
+    color: #aaabb1;
 }
 .projects{  
     padding-top: 10%;
@@ -150,11 +129,10 @@ body{
 }
 .project{
     padding: 20px;
-    background: #fff;
+    background: #141727;
     justify-content: center;
     align-items: center;
     display: flex;
-    box-shadow: 0px 0px 30px 0px gray;
     border-radius: 10px;
 }
 .project img{
@@ -163,22 +141,11 @@ body{
 }
 .project img:hover{
     transform: scale(1.1);
-    box-shadow: 0px 0px 30px 0px gray;
     border-radius: 10px 10px 0px 0px;
 }
 .footer-body{
-    animation: 10s infinite alternate ease-out footer;
-    border-radius: 10px 10px 0px 0px;
+    background: #141727;
 }
-@keyframes footer{
-    from{
-        background: #ee7752;
-    }
-    to{
-        background: #caee47;
-    }
-}
-
 
 .footer{
     display: grid;
@@ -195,23 +162,27 @@ body{
 }
 .footer a{
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    color: #aaabb1;
     font-weight: 600;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .footer a:hover{
-    color: #dd3b00;
+    color: #1f57d3;
+    transition: .1s;
+}
+.footer i{
+    color: #aaabb1;
     transition: .1s;
 }
 .footer i:hover{
-    color: #dd3b00;
+    color: #1f57d3;
     transition: .1s;
 }
 .footer img{
     width: 200px;
 }
 .footer-body .top{
-    background: #fd5518;
+    background: #1f57d3;
     padding: 5px;
     border-radius: 5px;
     margin-top: -10px;
@@ -222,10 +193,7 @@ body{
     margin-bottom: 20px;
     color: #fff;
 }
-.top:hover{
-    background: #00dd55;
-    color: #000;
-}
+
 @media screen and (max-width:1289px) {
     .about-right{
         margin-top: -5%;
